<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RMSOFT</string>

    <!-- Settings -->
    <string name="settings_label">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="settings_network">Network</string>
    <string name="settings_wifi">Wi-Fi</string>
    <string name="settings_wifi_subtitle">Connect to a wireless network</string>
    <string name="settings_display">Display</string>
    <string name="settings_brightness">Brightness</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_media">Media volume</string>
    <string name="settings_ringtone">Ringtone volume</string>
    <string name="settings_call">Call volume</string>
    <string name="settings_device">Device info</string>
    <string name="settings_device_name">Device name</string>
    <string name="settings_android_version">Android version</string>
    <string name="settings_storage">Storage</string>
    <string name="settings_battery">Battery</string>
    <string name="settings_android_version_value">Android %1$s (API %2$d)</string>
    <string name="settings_storage_value">%1$s used of %2$s · %3$s free</string>
</resources>
